--- a/frontend/html/login.html
+++ b/frontend/html/login.html
@@ -1,91 +1,61 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- Bootstrap css-->
-    <link
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- Bootstrap -->
+  <!-- <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
-    />
+    /> -->
+  <link rel="stylesheet" href="/bootstrap-5.0.2-dist/css/bootstrap.min.css">
+  <script src="/bootstrap-5.0.2-dist/js/bootstrap.bundle.min.js"></script>
 
-    <!-- Login css  -->
-    <link rel="stylesheet" href="../css/login.css" />
+  <!-- global css -->
+   <link rel="stylesheet" href="/css/global.css">
 
-    <!-- Web Components -->
-    <script src="../js/components/ButtonPrimary.js" defer></script>
-    <script src="../js/components/Logo.js" defer></script>
+  <!-- Login css  -->
+  <link rel="stylesheet" href="../css/login.css" />
 
-    <title>Login</title>
-  </head>
-  <body>
-    <section class="app-container">
-      <div class="box-img">
-        <h1>Bem-Vindo!</h1>
-        <a target="_self" href="./cadastro.html">
-          <app-button-primary
-            text="Não tenho cadastro"
-            cor="--background-secondary"
-          ></app-button-primary>
-        </a>
-      </div>
-      <div class="box-form">
-        <form action="#" method="post" class="card">
-            <app-logo></app-logo>
-          <div class="form-floating mb-3">
-            <input
-              type="email"
-              class="form-control"
-              id="floatingInput"
-              placeholder="name@example.com"
-              required
-            />
-            <label for="floatingInput">Email</label>
-          </div>
-          <div class="form-floating">
-            <input
-              type="password"
-              class="form-control"
-              id="floatingPassword"
-              placeholder="Password"
-              required
-            />
-            <label for="floatingPassword">Password</label>
-          </div>
-          <div
-            class="d-flex justify-content-between"
-            style="height: 20px; margin-bottom: 20px"
-          >
-            <div class="mb-3 form-check">
-              <input
-                type="checkbox"
-                class="form-check-input"
-                id="exampleCheck1"
-              />
-              <label class="form-check-label" for="exampleCheck1"
-                >Manter Conectado</label
-              >
-            </div>
+  <!-- Web Components -->
+  <script src="../js/components/ButtonPrimary.js" defer></script>
+  <script src="../js/components/Logo.js" defer></script>
+  <script src="../js/components/MyInput.js" defer></script>
 
-            <a href="#" class="recuperarSenha">Esqueci a senha</a>
+  <title>Login</title>
+</head>
+
+<body>
+  <section class="app-container">
+    <div class="box-img">
+      <h1>Bem-Vindo!</h1>
+      <a target="_self" href="./cadastro.html">
+        <app-button-primary text="Não tenho cadastro" cor="--background-secondary"></app-button-primary>
+      </a>
+    </div>
+    <div class="box-form">
+      <form action="#" method="post" class="card">
+        <app-logo></app-logo>
+
+        <app-myinput type="email" placeholder="Digite seu email" label="Email"></app-myinput>
+        <app-myinput type="password" placeholder="Digite seu password" label="Senha"></app-myinput>
+
+        <div class="d-flex justify-content-between" style="height: 20px; margin-bottom: 20px">
+          <div class="mb-3 form-check">
+            <input type="checkbox" class="form-check-input" id="exampleCheck1" />
+            <label class="form-check-label" for="exampleCheck1">Manter Conectado</label>
           </div>
 
-          <app-button-primary
-            type="submit"
-            text="Entrar"
-            cor="--background-primary"
-          ></app-button-primary>
-        </form>
-      </div>
-    </section>
+          <a href="#" class="recuperarSenha">Esqueci a senha</a>
+        </div>
 
-    <!-- Boostrap js -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+        <app-button-primary type="submit" text="Entrar" cor="--background-primary"></app-button-primary>
+      </form>
+    </div>
+  </section>
+</body>
+
 </html>
